--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ReactBoilerplate2",
+  "name": "designbysparticus2016",
   "version": "1.0.0",
-  "description": "Simple react app",
+  "description": "Simple portfolio app",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
@@ -9,7 +9,6 @@
   "author": "Dustin Morris",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.14.0",
     "express": "^4.13.4",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
